added multiple country support for local charts

--- a/lib/localization/app_en.arb
+++ b/lib/localization/app_en.arb
@@ -395,6 +395,8 @@
   "@nowPlaying": {},
   "ok": "Ok",
   "@ok": {},
+  "openInSpotify": "Open In Spotify",
+  "@openInSpotify": {},
   "or": "OR",
   "@or": {},
   "others": "Others",
