--- a/lib/localization/app_en.arb
+++ b/lib/localization/app_en.arb
@@ -509,6 +509,8 @@
   "@showQr": {},
   "shuffle": "Shuffle",
   "@shuffle": {},
+  "signInSpotify": "Sign in to Spotify",
+  "@signInSpotify": {},
   "size": "Size",
   "@size": {},
   "skip": "Skip",
