--- a/lib/localization/app_en.arb
+++ b/lib/localization/app_en.arb
@@ -493,6 +493,10 @@
   "@shareAppSub": {},
   "shareAppText": "Hey! Check out this cool music player app",
   "@shareAppText": {},
+  "shareLogs": "Share Logs",
+  "@shareLogs": {},
+  "shareLogsSub": "Share current sessions logs",
+  "@shareLogsSub": {},
   "showHere": "Show Here",
   "@showHere": {},
   "showHistory": "Show Search History",
