minor ui changes

--- a/lib/localization/app_en.arb
+++ b/lib/localization/app_en.arb
@@ -433,6 +433,8 @@
   "@proxySet": {},
   "proxySetSub": "Change Proxy IP and Port",
   "@proxySetSub": {},
+  "radio": "Radio",
+  "@radio": {},
   "rememberChoice": "Remember my choice",
   "@rememberChoice": {},
   "remove": "Remove",
