added option to disable spotify section

--- a/lib/localization/app_en.arb
+++ b/lib/localization/app_en.arb
@@ -515,6 +515,10 @@
   "@showPlaylists": {},
   "showQr": "Show QR Code",
   "@showQr": {},
+  "showTopCharts": "Show Top Charts",
+  "@showTopCharts": {},
+  "showTopChartsSub": "Show Spotify Top Charts on Home Screen",
+  "@showTopChartsSub": {},
   "shuffle": "Shuffle",
   "@shuffle": {},
   "signInSpotify": "Sign in to Spotify",
