added stats section

--- a/lib/localization/app_en.arb
+++ b/lib/localization/app_en.arb
@@ -371,6 +371,8 @@
   "@minutes": {},
   "moreInfo": "More Info",
   "@moreInfo": {},
+  "mostPlayedSong": "Most Played Song",
+  "@mostPlayedSong": {},
   "musicLang": "Music Language",
   "@musicLang": {},
   "musicLangSub": "To display songs on Home Screen",
@@ -551,6 +553,8 @@
   "@songPath": {},
   "songs": "Songs",
   "@songs": {},
+  "songsPlayed": "Songs Played",
+  "@songsPlayed": {},
   "sorry": "SORRY",
   "@sorry": {},
   "sponsor": "Sponsor this project",
@@ -561,6 +565,8 @@
   "@spotifyPublic": {},
   "spotifyTopCharts": "Spotify Top Charts",
   "@spotifyTopCharts": {},
+  "stats": "Stats",
+  "@stats": {},
   "stopDown": "Stop Download",
   "@stopDown": {},
   "stopOnClose": "Stop music on App Close",
