--- a/lib/localization/app_en.arb
+++ b/lib/localization/app_en.arb
@@ -123,6 +123,10 @@
   "@clearCache": {},
   "clearCacheSub": "Deletes Cached details including Homepage, Spotify Top Charts, YouTube and Last Session Data. Usually app automatically clears them when data become large\n",
   "@clearCacheSub": {},
+  "compactNotificationButtons": "Compact Notification Buttons",
+  "@compactNotificationButtons": {},
+  "compactNotificationButtonsSub": "Buttons to show in Compact Notification View",
+  "@compactNotificationButtonsSub": {},
   "confirmViewable": "Make sure the playlist is viewable",
   "@confirmViewable": {},
   "connectingRadio": "Connecting to Radio…",
