added option to block home sections

--- a/lib/localization/app_en.arb
+++ b/lib/localization/app_en.arb
@@ -67,6 +67,10 @@
   "@bgGrad": {},
   "bgGradSub": "Gradient used as background everywhere",
   "@bgGradSub": {},
+  "blacklistHomeSections": "Blacklist this section",
+  "@blacklistHomeSections": {},
+  "blacklistHomeSectionsConfirm": "Are you sure you want to blacklist this section? Once blacklisted, it won't be shown on home screen",
+  "@blacklistHomeSectionsConfirm": {},
   "blacklistedHomeSections": "Blacklisted Home Sections",
   "@blacklistedHomeSections": {},
   "blacklistedHomeSectionsSub": "Sections with these titles won't be shown on Home Screen",
