minor ui changes

--- a/lib/localization/app_en.arb
+++ b/lib/localization/app_en.arb
@@ -183,9 +183,9 @@
   "@deleteTheme": {},
   "deleteThemeSubtitle": "Are you sure you want to delete?",
   "@deleteThemeSubtitle": {},
-  "disclaimer": "Disclaimer :",
+  "disclaimer": "Disclaimer:",
   "@disclaimer": {},
-  "disclaimerText": "We respect your privacy more than anything else. Only your name, which you will enter here, will be recorded.",
+  "disclaimerText": "We respect your privacy more than anything else. All of your data is stored locally on your device only.",
   "@disclaimerText": {},
   "displayName": "Display Name",
   "@displayName": {},
@@ -395,6 +395,8 @@
   "@myMusic": {},
   "no": "No",
   "@no": {},
+  "noFileSelected": "No File selected",
+  "@noFileSelected": {},
   "noFolderSelected": "No Folder selected",
   "@noFolderSelected": {},
   "noLangSelected": "No Music language selected. Select a language to see songs on Home Screen",
@@ -489,7 +491,7 @@
   "@searchVideo": {},
   "searchYt": "Search on YouTube",
   "@searchYt": {},
-  "selectBackFile": "Select Backup File",
+  "selectBackFile": "Select Backup File (.zip)",
   "@selectBackFile": {},
   "selectBackLocation": "Select Backup Location",
   "@selectBackLocation": {},
