added streaming wifi quality

--- a/lib/localization/app_en.arb
+++ b/lib/localization/app_en.arb
@@ -322,7 +322,7 @@
   "included": "Included",
   "@included": {},
   "includedDetails": "Only songs from selected folders will be shown",
-  "@included": {},
+  "@includedDetails": {},
   "insta": "Instagram",
   "@insta": {},
   "ipAdd": "IP Address",
@@ -591,6 +591,10 @@
   "@streamQuality": {},
   "streamQualitySub": "Higher quality uses more data",
   "@streamQualitySub": {},
+  "streamWifiQuality": "Streaming Quality (Wifi)",
+  "@streamWifiQuality": {},
+  "streamWifiQualitySub": "This will be used whenever Wifi is connected",
+  "@streamWifiQualitySub": {},
   "successTagEdit": "Successfully edited tags !",
   "@successTagEdit": {},
   "supportEq": "Support Equalizer",
