more image optimization

--- a/lib/localization/app_en.arb
+++ b/lib/localization/app_en.arb
@@ -657,6 +657,10 @@
   "@useDownSub": {},
   "useHome": "Use Main Section for Better Quality and Download Support",
   "@useHome": {},
+  "useLessDataImage": "Use Less Data for Images",
+  "@useLessDataImage": {},
+  "useLessDataImageSub": "This will reduce the quality of images in the app, but will save your data",
+  "@useLessDataImageSub": {},
   "useProxy": "Use Proxy",
   "@useProxy": {},
   "useProxySub": "Turn this on if you are not from India and having issues with search, like getting only Indian Songs or not getting any results, etc. You can even use VPN with Indian Server\n",
