Readded dense miniplayer

--- a/lib/localization/app_en.arb
+++ b/lib/localization/app_en.arb
@@ -477,9 +477,13 @@
   "@resetOnSkip": {},
   "resetOnSkipSub": "Replay from start instead of skipping to previous song",
   "@resetOnSkipSub": {},
+  "restart": "You might need to restart app",
+  "@restart": {},
+  "restartRequired": "You need to restart app",
+  "@restartRequired": {},
   "restore": "Restore",
   "@restore": {},
-  "restoreSub": "Restore your data from Backup.\nYou might need to restart app\n",
+  "restoreSub": "Restore your data from Backup.",
   "@restoreSub": {},
   "resultsNotFound": "Results Not Found",
   "@resultsNotFound": {},
